cert-manager/templates/network_policy.yml
#@ load("@ytt:data", "data")

#@ if data.values.cert_manager.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager
  namespace: cert-manager
  labels:
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/instance: cert-manager
spec:
  podSelector: {}
  ingress:
  - from: #! allow access for itself
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: cert-manager
      podSelector: {}
  - from: #! allow access for kube-system
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: kube-system
      podSelector: {}
  - from: #! allow access for gateway-api-controller
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: envoy-gateway-system
      podSelector: {}
    ports:
    - port: 9402
    - port: 10250
  - from: #! allow metrics access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 9402
#@ end
